<resources>
    <string name="app_name">DesafioMarvelApi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_the_marvel_hq_s">Welcome to the Marvel HQ\'s</string>
    <string name="remember">Remember</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="create_account">Create account</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="_01">#01</string>
    <string name="pre_o">Preço:</string>
    <string name="paginas">Paginas:</string>
    <string name="published">Published:</string>
    <string name="price">Price:</string>
    <string name="pages">Pages:</string>
    <string name="descricao">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut congue erat at mi consequat, sed imperdiet ligula consequat. Nulla rutrum elit enim, id fringilla mi tempus nec. Vivamus ipsum mi, ultricies id risus eu, imperdiet tristique arcu. Duis vehicula erat ligula, vel dapibus libero lacinia sed. Sed ac dapibus mi.</string>
    <string name="register">Register</string>
    <string name="imagem_fecha_fullsize">Imagem fecha Fullsize</string>
    <string name="imagem_fullsize">Imagem Fullsize</string>
</resources>