<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".quadrinhoinfo.view.ComicInfoFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_250"
        android:scaleType="fitXY"
        tools:background="@color/preto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_250"
        android:scaleType="fitXY"
        android:alpha="0.55"
        tools:background="@drawable/try_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageReturnIcon"
        android:layout_width="@dimen/dimen_30"
        android:layout_height="@dimen/dimen_30"
        android:layout_marginTop="@dimen/dimen_24"
        android:layout_marginStart="@dimen/dimen_16"
        android:src="@drawable/seta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/imageContainer"
        android:layout_width="@dimen/dimen_140"
        android:layout_height="@dimen/dimen_200"
        android:layout_marginTop="@dimen/dimen_24"
        android:layout_marginStart="@dimen/dimen_16"
        android:background="@color/branco"
        android:padding="@dimen/dimen_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageReturnIcon">

        <ImageView
            android:id="@+id/imageViewComicList"
            android:layout_width="@dimen/dimen_140"
            android:layout_height="@dimen/dimen_200"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            tools:src="@drawable/teste_imagem" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_24"
        android:layout_marginEnd="@dimen/dimen_16"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/branco"
        android:textSize="@dimen/dimen_text_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageContainer"
        tools:text="AMZING SIPERDAR MAN AND HIS FRIENDS FIGHTI TO " />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="@dimen/dimen_0"
        app:layout_constrainedHeight="true"
        app:layout_constraintHeight_max="@dimen/dimen_200"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_24"
        android:layout_marginEnd="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle">

        <TextView
            android:id="@+id/txtDescricao"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/branco"
            android:textSize="@dimen/dimen_text_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/descricao"/>
    </ScrollView>

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_16"
        android:textSize="@dimen/dimen_text_15"
        android:fontFamily="sans-serif-black"
        android:text="@string/published"
        android:textColor="@color/branco"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView" />

    <TextView
        android:id="@+id/txtPublished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8"
        android:layout_marginTop="@dimen/dimen_16"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/branco"
        android:textSize="@dimen/dimen_text_15"
        app:layout_constraintStart_toEndOf="@id/published"
        app:layout_constraintTop_toBottomOf="@id/scrollView"
        tools:text="April 05, 2016" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_8"
        android:textSize="@dimen/dimen_text_15"
        android:fontFamily="sans-serif-black"
        android:text="@string/pre_o"
        android:textColor="@color/branco"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/published" />

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8"
        android:layout_marginTop="@dimen/dimen_8"
        android:fontFamily="sans-serif-light"
        android:textSize="@dimen/dimen_text_15"
        android:textColor="@color/branco"
        app:layout_constraintStart_toEndOf="@id/price"
        app:layout_constraintTop_toBottomOf="@id/txtPublished"
        tools:text="$ 1,50" />

    <TextView
        android:id="@+id/pages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_8"
        android:textSize="@dimen/dimen_text_15"
        android:fontFamily="sans-serif-black"
        android:text="@string/paginas"
        android:textColor="@color/branco"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price" />

    <TextView
        android:id="@+id/txtPages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8"
        android:layout_marginTop="@dimen/dimen_8"
        android:fontFamily="sans-serif-light"
        android:textSize="@dimen/dimen_text_15"
        android:textColor="@color/branco"
        app:layout_constraintStart_toEndOf="@id/pages"
        app:layout_constraintTop_toBottomOf="@id/txtPrice"
        tools:text="48" />



</androidx.constraintlayout.widget.ConstraintLayout>